{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 2063,
  "lineage": "9c9dad84-ef5f-332e-c867-99383986baf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:internet-gateway/igw-0c55cc7d2e51478c9",
            "id": "igw-0c55cc7d2e51478c9",
            "owner_id": "231232113671",
            "tags": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:231232113671:loadbalancer/app/app-load-balancer/5d81b64645c5dde4",
            "arn_suffix": "app/app-load-balancer/5d81b64645c5dde4",
            "dns_name": "app-load-balancer-1429999945.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:231232113671:loadbalancer/app/app-load-balancer/5d81b64645c5dde4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-load-balancer",
            "security_groups": [
              "sg-04bf3fa749bc5977c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0afbf78f3af4b809c"
              },
              {
                "subnet_id": "subnet-0cb6730fe868d632b"
              },
              {
                "subnet_id": "subnet-0dc1dafd5b456ddfd"
              }
            ],
            "subnets": [
              "subnet-0afbf78f3af4b809c",
              "subnet-0cb6730fe868d632b",
              "subnet-0dc1dafd5b456ddfd"
            ],
            "vpc_id": "vpc-0cdc6ebafa4bede2b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:231232113671:listener/app/app-load-balancer/5d81b64645c5dde4/b27c6576fe35e023",
            "certificate_arn": "arn:aws:acm:us-east-1:231232113671:certificate/73f669ff-bd3f-42aa-b3b6-33fff9e8da05",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:231232113671:targetgroup/lb-target-group/b78e2b4789bf5c0f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:231232113671:listener/app/app-load-balancer/5d81b64645c5dde4/b27c6576fe35e023",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:231232113671:loadbalancer/app/app-load-balancer/5d81b64645c5dde4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.load_balancer",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:231232113671:targetgroup/lb-target-group/b78e2b4789bf5c0f",
            "arn_suffix": "targetgroup/lb-target-group/b78e2b4789bf5c0f",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/mybooks",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:231232113671:targetgroup/lb-target-group/b78e2b4789bf5c0f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-045230244a9093be1",
            "ipv6_address_count": 0,
            "mac_address": "0e:6d:6c:7d:26:15",
            "private_dns_name": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "private_ips": [
              "10.0.1.55"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03665bf84437c6689"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0afbf78f3af4b809c",
            "tags": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.application",
            "aws_security_group.load_balancer",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbbfad46546b1a9a",
            "owner_id": "231232113671",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c55cc7d2e51478c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route"
            },
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07294f31b5dd97819",
            "route_table_id": "rtb-0bbbfad46546b1a9a",
            "subnet_id": "subnet-0afbf78f3af4b809c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0962d35085d5c9476",
            "route_table_id": "rtb-0bbbfad46546b1a9a",
            "subnet_id": "subnet-0cb6730fe868d632b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0359296f57e5169a1",
            "route_table_id": "rtb-0bbbfad46546b1a9a",
            "subnet_id": "subnet-0dc1dafd5b456ddfd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet3",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:security-group/sg-03665bf84437c6689",
            "description": "Allow application inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03665bf84437c6689",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bf3fa749bc5977c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bf3fa749bc5977c"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04bf3fa749bc5977c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application",
            "name_prefix": "",
            "owner_id": "231232113671",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer",
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:security-group/sg-0b854ffe3be95b36d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b854ffe3be95b36d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database",
            "name_prefix": "",
            "owner_id": "231232113671",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:security-group/sg-04bf3fa749bc5977c",
            "description": "only allow 80 for ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bf3fa749bc5977c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group-lb",
            "name_prefix": "",
            "owner_id": "231232113671",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:subnet/subnet-0afbf78f3af4b809c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0afbf78f3af4b809c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231232113671",
            "tags": {
              "Name": "csye6225-subnet01"
            },
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:subnet/subnet-0cb6730fe868d632b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cb6730fe868d632b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231232113671",
            "tags": {
              "Name": "csye6225-subnet02"
            },
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:subnet/subnet-0dc1dafd5b456ddfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0dc1dafd5b456ddfd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "231232113671",
            "tags": {
              "Name": "csye6225-subnet03"
            },
            "vpc_id": "vpc-0cdc6ebafa4bede2b"
          },
          "dependencies": [
            "aws_vpc.vpc1234"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1234",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:231232113671:vpc/vpc-0cdc6ebafa4bede2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a339a1256015df79",
            "default_route_table_id": "rtb-0c30fd197c5c805a9",
            "default_security_group_id": "sg-0f9eb63dbf6675d29",
            "dhcp_options_id": "dopt-b9aff8c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cdc6ebafa4bede2b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c30fd197c5c805a9",
            "owner_id": "231232113671",
            "tags": {
              "Name": "csye6225-vpc-spring2021"
            }
          }
        }
      ]
    }
  ]
}